Release of version 2.0.0 (#37)
* Support gradle (#30)
* Cleaning up, tests etc.
* Add test logging.
* Cleanup of dependencies.
* Updating to Gradle 6.4.1
* Rewrite to Kotlin (#36)